Incorporate firestore into @Post('users') endpoint. creation of users now adds user data into users collection and into users' own name doc
